# cortext

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: version-bump.yml
Docs/: brainstorm_kg_hooks_web.md  conversation-ux-redesign.md  mcp-server.md  multi-ai-support.md  rag-guide.md  session-guide.md  spec.md  tasks  upgrade-guide.md  user-guide.md
Docs/archive/: mcp-server.md
Docs/project_docs/: brainstorm-kg-hooks-web.md  improvements.md  tasks
claude_commands/: workspace_add.md  workspace_brainstorm.md  workspace_debug.md  workspace_learn.md  workspace_meeting.md  workspace_plan.md  workspace_projectmanage.md  workspace_resume.md  workspace_review.md  workspace_stop-conversation.md
ideas/: conversation-ux-redesign.md
openspec/: project.md
openspec/changes/add-changelog-automation/: proposal.md  tasks.md
openspec/changes/add-conversation-resumption/: design.md  tasks.md
openspec/changes/add-documentation-system/: proposal.md  tasks.md
openspec/changes/add-hooks-system/: proposal.md  tasks.md
openspec/changes/add-projectmanage-type/: proposal.md
openspec/changes/add-rag-pipeline/: design.md  proposal.md  tasks.md
openspec/changes/add-semver-versioning/: tasks.md
openspec/changes/conversational-workflows/: proposal.md  tasks.md
scripts/bash/: auto-embed.sh  brainstorm.sh  commit-session.sh  common.sh  debug.sh  learn.sh  meeting.sh  plan.sh  projectmanage.sh  review.sh  workspace-status.sh
scripts/git-hooks/: post-checkout  post-commit  pre-commit
scripts/hooks/: dispatch.sh
src/cortext_cli/: __init__.py  cli.py  converters.py  utils.py
src/cortext_mcp/: __init__.py  server.py
src/cortext_rag/: __init__.py  embedder.py  indexer.py  mcp_tools.py  models.py  retriever.py  store.py
templates/: brainstorm.md  cursorrules  debug-session.md  feature-planning.md  hooks.md  learning-notes.md  mcp_config.json  meeting-notes.md  opencode_config.json  project-index.md  project-management.md  review-template.md
tests/: __init__.py
tests/cli/: test_init.py  test_mcp_init.py  test_mcp_install.py
tests/mcp/: test_rag_tools.py
tests/rag/: __init__.py  conftest.py
(+116 files in other folders)
