[project]
name = "cortext-workspace"
version = "0.1.0"
description = "AI-augmented workspace for knowledge work"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Cortext Contributors" }]

dependencies = [
    "typer>=0.12.0",
    "rich>=13.0.0",
    "httpx[socks]>=0.27.0",
    "platformdirs>=4.0.0",
]

[project.scripts]
cortext = "cortext_cli:main"
cortext-mcp = "cortext_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cortext_cli"]

[tool.hatch.build.targets.wheel.shared-data]
"templates" = "share/cortext/templates"
"claude_commands" = "share/cortext/claude_commands"
"scripts" = "share/cortext/scripts"

[tool.hatch.build.targets.sdist]
include = [
    "src/",
    "templates/",
    "claude_commands/",
    "scripts/",
]
