[project]
name = "cortext-workspace"
version = "0.1.0"
description = "AI-augmented workspace for knowledge work"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Cortext Contributors" }]

dependencies = [
    "typer>=0.12.0",
    "rich>=13.0.0",
    "httpx[socks]>=0.27.0",
    "platformdirs>=4.0.0",
    "fastembed>=0.2.0",
    "chromadb>=0.4.0",
    "pypdf>=3.0.0",
    "python-docx>=0.8.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=4.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.10.0",
]

[project.scripts]
cortext = "cortext_cli:main"
cortext-mcp = "cortext_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cortext_cli", "src/cortext_rag", "src/cortext_mcp"]

[tool.hatch.build.targets.wheel.shared-data]
"templates" = "share/cortext/templates"
"claude_commands" = "share/cortext/claude_commands"
"scripts" = "share/cortext/scripts"

[tool.hatch.build.targets.sdist]
include = [
    "src/",
    "templates/",
    "claude_commands/",
    "scripts/",
]
